--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 
 :root {
   --background: #ffffff;
@@ -17,7 +19,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Roboto, Helvetica, sans-serif;
+  font-family: Roboto
 }
 
 .crtOffBox {
